[Blink] Modern 2026 Redesign of ExcelEdu • Implemented a premium 2026-inspired UI/UX with glassmorphism and noise textures • Completed all internal pages (About, Courses, Achievements, Gallery, Contact) • Added new sections: Testimonials, Faculty Highlight, and interactive Timeline • Enhanced the Achievements page into a prestigious Hall of Fame with year filters • Improved the Gallery with a creative masonry grid and advanced lightbox • Optimized all forms and interactive elements for better UX • Updated design system with refined HSL tokens and larger typography scale

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blink App</title>
+    <title>Excel Educational Institute | Premier CA, CS, CMA Coaching in Raipur</title>
+    <meta name="description" content="Excel Educational Institute is Central India's leading hub for professional commerce education. Expert coaching for CA, CS, CMA, and high school commerce since 2007.">
     <!-- CRITICAL: DO NOT REMOVE/MODIFY THIS COMMENT OR THE SCRIPT BELOW -->
     <script src="https://blink.new/auto-engineer.js?projectId=exceledu-modern-redesign-u9xjoyck" type="module"></script>
   </head>
